src/parse/snapshots/blis__parse__lexer__tests__test_programs__multiline_strings.blis.tokens.snap
---
source: src/parse/lexer.rs
description: "let haiku = \"multiline strings are\nsurprisingly easier\nimplementation\";\n\nprintln(haiku);\n"
input_file: test_programs/multiline_strings.blis
---
[
  Lexeme(
    token: Let,
    text: "let",
    line: 1,
  ),
  Lexeme(
    token: Identifier,
    text: "haiku",
    line: 1,
  ),
  Lexeme(
    token: Equal,
    text: "=",
    line: 1,
  ),
  Lexeme(
    token: String,
    text: "\"multiline strings are\nsurprisingly easier\nimplementation\"",
    line: 1,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 3,
  ),
  Lexeme(
    token: Identifier,
    text: "println",
    line: 5,
  ),
  Lexeme(
    token: LeftParen,
    text: "(",
    line: 5,
  ),
  Lexeme(
    token: Identifier,
    text: "haiku",
    line: 5,
  ),
  Lexeme(
    token: RightParen,
    text: ")",
    line: 5,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 5,
  ),
  Lexeme(
    token: Eof,
    text: "",
    line: 6,
  ),
]
