src/parse/snapshots/blis__parse__lexer__tests__test_programs__one.blis.tokens.snap
---
source: src/parse/lexer.rs
description: "1;\n"
input_file: test_programs/one.blis
---
[
  Lexeme(
    token: Integer,
    text: "1",
    line: 1,
  ),
  Lexeme(
    token: Semicolon,
    text: ";",
    line: 1,
  ),
  Lexeme(
    token: Eof,
    text: "",
    line: 2,
  ),
]
